--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "googlebooks-app",
+  "name": "Book-search-engine-challenge-accepted",
   "version": "1.0.0",
-  "description": "",
+  "description": "GraphQL-challenge",
   "main": "server/server.js",
   "scripts": {
     "start": "node server/server.js",
